# api/whitelist/controller.go
@@ -6,6 +6,7 @@ import (
 	"net/http"
 	"waf/domain/whitelist"
 	"waf/utils/api"
+	"waf/utils/validator"
 )
 
 var ctx = context.Background()
@@ -27,13 +28,18 @@ func NewWhitelistController(service *whitelist.Service) *Controller {
 // @Tags IP黑白名单
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Authorization header"
 // @Param AddIPToWhitelistRequest body AddIPToWhitelistRequest true "IP信息"
 // @Success 201 {object} Response
 // @Failure 400 {object} api.ErrorResponse
-// @Router /whitelist [post]
+// @Router /waf/whitelist [post]
 func (c *Controller) AddIPToWhitelist(g *gin.Context) {
 	var req AddIPToWhitelistRequest
 	if err := g.ShouldBind(&req); err != nil {
+		api.HandleError(g, api.ErrInvalidBody)
+		return
+	}
+	if !validator.ValidateIPorCIDR(req.IP) {
 		api.HandleError(g, api.ErrInvalidBody)
 		return
 	}
@@ -50,13 +56,18 @@ func (c *Controller) AddIPToWhitelist(g *gin.Context) {
 // @Tags IP黑白名单
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Authorization header"
 // @Param AddIPToWhitelistRequest body AddIPToWhitelistRequest true "IP信息"
 // @Success 200 {object} Response
 // @Failure 400 {object} api.ErrorResponse
-// @Router /whitelist [delete]
+// @Router /waf/whitelist [delete]
 func (c *Controller) RemoveIPFromWhitelist(g *gin.Context) {
 	var req AddIPToWhitelistRequest
 	if err := g.ShouldBind(&req); err != nil {
+		api.HandleError(g, api.ErrInvalidBody)
+		return
+	}
+	if !validator.ValidateIPorCIDR(req.IP) {
 		api.HandleError(g, api.ErrInvalidBody)
 		return
 	}
@@ -66,4 +77,22 @@ func (c *Controller) RemoveIPFromWhitelist(g *gin.Context) {
 		return
 	}
 	g.JSON(http.StatusOK, Response{Message: "success"})
+}
+
+// GetIps godoc
+// @Summary 获取白名单列表
+// @Tags IP黑白名单
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Authorization header"
+// @Success 200 {object} IpResponse
+// @Failure 400 {object} api.ErrorResponse
+// @Router /waf/whitelist [get]
+func (c *Controller) GetIps(g *gin.Context) {
+	ips, err := c.whitelistService.Get(ctx)
+	if err != nil {
+		api.HandleError(g, api.ErrInvalidBody)
+		return
+	}
+	g.JSON(http.StatusOK, IpResponse{Data: ips})
 }
