# api/whitelist/types.go
@@ -7,3 +7,7 @@ type AddIPToWhitelistRequest struct {
 type Response struct {
 	Message string `json:"msg"`
 }
+
+type IpResponse struct {
+	Data []string `json:"data"`
+}
